# SubstitutionBot

./: .gitmodules  CMakeLists.txt  README.md  classmates_TEMPLATE.json  config_TEMPLATE.json  courses_TEMPLATE.json  groups_TEMPLATE.json  holidays_TEMPLATE.json
src/: Commands.cpp  Commands.h  main.cpp
src/Checkers/: BirthdayChecker.cpp  BirthdayChecker.h  CoursesChecker.cpp  CoursesChecker.h  RemindChecker.cpp  RemindChecker.h  SubstitutionChecker.cpp  SubstitutionChecker.h
src/Core/: Core.cpp  Core.h
src/edupage/: Substitution.cpp  Substitution.h
